--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,9 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bazar Bandeirantes</title>
     <link rel="stylesheet" href="/estilos/styles.css">
+    <title>Sobre nos</title>
 </head>
+
+<header>
+    <div>
+        <img src="" alt="Logo Bazar Bandeirantes">
+    </div>
+    <p>BAZAR BANDEIRANTES</p>
+    <nav>
+
+    </nav>
+</header>
 
 <body>
 
