--- a/sobrenos.html
+++ b/sobrenos.html
@@ -8,17 +8,21 @@
     <title>Sobre nos</title>
 </head>
 
-<header>
-    <div>
-        <img src="" alt="Logo Bazar Bandeirantes">
-    </div>
-    <p>BAZAR BANDEIRANTES</p>
-    <nav>
-
+<header class="cabecalho">
+    <nav class="menu">
+        <a href=""> Home</a>
+        <a href=""> Sobre nos</a>
+        <a href=""></a>
     </nav>
 </header>
 
 <body>
+    <main class="sobre_nos">
+        <section class="sobre_nos_descricao">
+
+        </section>
+
+    </main>
 
 </body>
 
