--- a/login.html
+++ b/login.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realizar Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/estilos/styles.css">
 </head>
 
 <body>
-    <div class="form-login">
-        <h2>Login</h2>
-        <form action="" method="post">
+    <div class="login">
+            <form class="form-login" action="" method="post">
+            <h2>Login</h2>
             <label for="usuario">E-mail cadastrado</label>
             <input type="texto" id="usuario" name="usuario" required>
 
