Sobre nós certo

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -10,20 +10,40 @@
 
 <header class="cabecalho">
     <nav class="menu">
-        <a href=""> Home</a>
-        <a href=""> Sobre nos</a>
-        <a href=""></a>
+        <ul>
+            <li><a href=""> Home</a></li>
+            <li><a href=""> Sobre nos</a></li>
+            <li><a href=""> Produtos</a></li>
+            <li><a href=""> Avaliacoes</a></li>
+            <li><a href=""> Noticias</a></li>
+        </ul>
     </nav>
 </header>
 
 <body>
-    <main class="sobre_nos">
-        <section class="sobre_nos_descricao">
+    <section class="perfil">
+        <h1>Sobre nós</h1>
+        <img src="" alt="Imagem fundadora">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium culpa quos dicta architecto officiis ea
+            sed, quisquam corporis quasi necessitatibus perferendis ipsa tenetur veniam provident facilis rerum incidunt
+            nihil dolor.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum accusantium iste fuga ullam perspiciatis
+            quaerat hic repudiandae molestias, nisi et eligendi alias laboriosam ratione amet recusandae veniam, ea
+            repellat nulla?</p>
+        <p>
+            <a href="">Instagram</a>
+            <a href="">Facebook</a>
+            <a href="">tiktok</a>
+        </p>
+    </section>
 
-        </section>
+    <section class="Equipe">
+        <h2>Nossa equipe</h2>
+        <div class="mebros-equipe">
+            <img src="" alt="">
+        </div>
 
-    </main>
-
+    </section>
 </body>
 
 </html>
