--- a/login.html
+++ b/login.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/estilos/styles.css">
+    <link rel="stylesheet" href="/estilos/styles_login.css">
 </head>
 
 <body>
     <div class="login">
-            <form class="form-login" action="" method="post">
+        <form class="form-login" action="" method="post">
             <h2>Login</h2>
             <label for="usuario">E-mail cadastrado</label>
             <input type="texto" id="usuario" name="usuario" required>
