--- a/sobrenos.html
+++ b/sobrenos.html
@@ -14,6 +14,7 @@
             <li><a href=""> Home</a></li>
             <li><a href=""> Sobre nos</a></li>
             <li><a href=""> Produtos</a></li>
+            <li><a href=""> Promoções</a></li>
             <li><a href=""> Avaliacoes</a></li>
             <li><a href=""> Noticias</a></li>
         </ul>
