--- a/sobrenos.html
+++ b/sobrenos.html
@@ -41,8 +41,8 @@
     </section>
 
     <!--secao equipe-->
+    <h2>Nossa equipe</h2>
     <section class="equipe">
-        <h2>Nossa equipe</h2>
         <div class="mebros-equipe">
             <img src="/fotos/pessoa01.jpg" alt="Membro 01">
             <h3>Débora Rosada</h3>
@@ -64,8 +64,8 @@
     </section>
 
     <!--secao espaco loja-->
+    <h2>Nosso Espaço</h2>
     <section class="nosso-local">
-        <h2>Nosso Espaço</h2>
         <div><img src="/fotos/loja01.jpg" alt=""></div>
         <div><img src="/fotos/loja02.jpg" alt=""></div>
         <div><img src="/fotos/loja03.jpg" alt=""></div>
@@ -85,32 +85,30 @@
 
     <section class="faq">
         <h2>Perguntas Frequentes</h2>
-        <ul>
-            <li>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, voluptatum, officiis saepe
-                    repudiandae atque assumenda accusamus impedit fugiat nihil sequi minus labore quis cum. In dolorum
-                    commodi hic sequi rem!</p>
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae id repudiandae tenetur ducimus
-                    aliquam dolore, animi nemo culpa harum quis praesentium sit! Pariatur nam magni adipisci aut
-                    reprehenderit enim sint?</span>
-            </li>
-            <li>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat maxime aliquid deserunt vitae
-                    voluptate necessitatibus alias dolorem vel. Soluta repellendus animi maiores nostrum minus labore
-                    quod voluptatibus illum quo beatae?</p>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo reprehenderit corporis, unde nisi
-                    ipsa numquam, esse aut dolorem vitae aliquid eum nemo? Cupiditate, ad. Fuga doloremque iste
-                    quibusdam a quod!</span>
-            </li>
-            <li>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque molestiae voluptatibus quia
-                    consequatur voluptatum architecto sunt et, itaque animi dolorum doloribus cumque, eligendi
-                    doloremque eos aliquam corporis nulla illo?</p>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id optio dolor perspiciatis ut velit
-                    quae, earum temporibus minus, eos debitis molestias in voluptatum asperiores delectus fuga quidem
-                    corrupti laboriosam. Dolorum?</span>
-            </li>
-        </ul>
+        <details>
+            <summary>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsum vitae molestiae, est a
+                soluta facere sapiente! Deleniti, quo voluptatem amet porro nulla sunt iusto voluptatibus! Autem quos
+                nostrum eveniet!</summary>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique debitis quia, enim maxime minima,
+                ullam deserunt expedita dolorem eum, sequi reprehenderit omnis odio vero blanditiis perspiciatis
+                distinctio incidunt. Vel, molestiae.</p>
+        </details>
+        <details>
+            <summary>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas voluptatibus, placeat laboriosam,
+                doloribus molestiae officia ex assumenda quam vel accusamus nulla, eveniet expedita sit hic minima
+                aliquam aspernatur est! Quasi.</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa necessitatibus inventore molestiae quia,
+                at a dolorem dignissimos veniam nisi voluptates nesciunt distinctio laboriosam dolores quidem eaque,
+                illum deserunt possimus explicabo.</p>
+        </details>
+        <details>
+            <summary>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates atque exercitationem natus.
+                Magni odit facilis perferendis corrupti quas molestias repellendus iste, necessitatibus quasi nulla
+                natus accusamus obcaecati omnis, consectetur hic.</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis odit, facilis iste quasi, rem non
+                repellendus pariatur consectetur soluta dolor excepturi aliquam placeat possimus voluptatum molestiae
+                quos quo molestias consequuntur.?</p>
+        </details>
     </section>
 
 </body>
