--- a/html/sobrenos.html
+++ b/html/sobrenos.html
@@ -8,20 +8,25 @@
     <title>Sobre nos</title>
 </head>
 
-<header class="cabecalho">
-    <nav class="menu">
-        <ul>
-            <li><a href=""> Home</a></li>
-            <li><a href=""> Sobre nos</a></li>
-            <li><a href=""> Produtos</a></li>
-            <li><a href=""> Promoções</a></li>
-            <li><a href=""> Avaliacoes</a></li>
-            <li><a href=""> Noticias</a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
+
+    <header>
+        <img src="/fotos/Logo2.png" alt="Logo do Bazar Bandeirante.">
+        <nav class="menu">
+            <ul>
+                <li><a href="/html/index.html"> Home</a></li>
+                <li><a href="/html/login.html"> Login</a></li>
+                <li><a href="/html/sobrenos.html"> Sobre nos</a></li>
+                <li><a href="/html/avaliacoes.html"> Avaliacoes</a></li>
+                <li><a href="/html/promo.html"> Promoções</a></li>
+                <li><a href="/html/blog.html"> Blog</a></li>
+                <li><a href="/html/lista_de_tarefa.html"> Lista de Tarefa</a></li>
+                <li><a href="/html/galeria.html"> Galeria de fotos</a></li>
+                <li><a href="/html/produtos.html"> Produto</a></li>
+                <li><a href="/html/lancamento.html"> Lançamento</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!--secao sobre nos-->
     <section class="perfil">
