--- a/html/promo.html
+++ b/html/promo.html
@@ -30,7 +30,7 @@
     <h1>Promoções</h1>
     <div class="promo">
         <div class="promo-item">
-            <img src="fotos/vestido.jpg" alt="Vestido Promocao">
+            <img src="/fotos/vestido.jpg" alt="Vestido Promocao">
             <h2>Vestido Cetim</h2>
             <p>Vestido em cetim, disponível em várias cores</p>
             <p class="valor">
